cms compatible web

--- a/app/services/service_params.yml
+++ b/app/services/service_params.yml
@@ -5,3 +5,19 @@
     - :request_url
     - :custom_extended_data
   :optional:
+
+'DynamicContent::ForHome':
+  :mandatory:
+  :optional:
+
+'DynamicContent::ForTeam':
+  :mandatory:
+  :optional:
+
+'DynamicContent::ForCareer':
+  :mandatory:
+  :optional:
+
+'DynamicContent::ForPartner':
+  :mandatory:
+  :optional:
