cms changes in ost-web

--- a/app/services/service_params.yml
+++ b/app/services/service_params.yml
@@ -6,18 +6,40 @@
     - :custom_extended_data
   :optional:
 
+'ServicesBase':
+  :mandatory:
+  :optional:
+    - :ts
+    - :ps
+    - :path
+
+
+
 'DynamicContent::ForHome':
   :mandatory:
   :optional:
+    - :ts
+    - :ps
+    - :path
+
 
 'DynamicContent::ForTeam':
   :mandatory:
   :optional:
+    - :ts
+    - :ps
+    - :path
 
 'DynamicContent::ForCareer':
   :mandatory:
   :optional:
+    - :ts
+    - :ps
+    - :path
 
 'DynamicContent::ForPartner':
   :mandatory:
   :optional:
+    - :ts
+    - :ps
+    - :path
