--- a/config/constants.yml
+++ b/config/constants.yml
@@ -21,6 +21,7 @@ constants:
     view_root_url: <%= ENV['COMPANY_VIEW_ROOT_URL'] %>
     token_sale_url: <%= ENV['COMPANY_TOKEN_SALE_URL'] %>
     simple_token_url: <%= ENV['COMPANY_SIMPLE_TOKEN_URL'] %>
+    dev_ost_root_url: <%= ENV['COMPANY_DEV_ROOT_URL'] %>
 
   pepo_campaign:
     encrypted_client_id: <%= ENV['STW_CAMPAIGN_ENCRYPTED_CLIENT_ID'] %>
