Pipe-drive integration with partner page -> Connect with us

--- a/app/services/service_params.yml
+++ b/app/services/service_params.yml
@@ -34,3 +34,11 @@
     - :ts
     - :ps
     - :path
+
+'UserManagement::ContactUsPipeDrive::Partner':
+  :mandatory:
+    - :full_name
+    - :email
+    - :company
+  :optional:
+    - :project_description
